--- a/src/app/book-list/cart/cart.component.html
+++ b/src/app/book-list/cart/cart.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="addedBook.length>0">
+<div *ngIf="addedBook && addedBook.length>0">
     <h4>Added book:</h4>
   <ol>
     <li *ngFor="let book of addedBook">
@@ -7,9 +7,9 @@
     </li>
 </ol>
 </div>
-<div *ngIf="addedBook.length==0" style="text-align: center; margin: 30px 0px;">
+<div *ngIf="addedBook && addedBook.length==0" style="text-align: center; margin: 30px 0px;">
 <h4>No books in the Cart</h4>
 </div>
-<div *ngIf="addedBook.length>0" style="text-align: center; margin-top: 30px;">
+<div *ngIf="addedBook && addedBook.length>0" style="text-align: center; margin-top: 30px;">
     <button class="btn" (click)="openModal()">Rent Out</button>
 </div>
